# rtsp-video-server

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README.md  config.yaml
CMakeModules/: FindFFmpeg.cmake  FindLive555.cmake
benchmark/: benchmark.json  benchmark_gen.py  log_parser.py  log_to_excel_writer.py  tcp_client.py  tcp_server.py
benchmark/client_server/: tcp_client.py  tcp_server.py
benchmark/results/mono_logs/: Benchmark-results.xlsx
benchmark/results/stereo_logs/: Benchmark-stereo-results.xlsx
benchmark/results/stereo_logs_2/: Benchmark-stereo-results.xlsx
benchmark/results/stereo_logs_3/: Benchmark-stereo-results.xlsx
cmake/: FindFFmpeg.cmake  FindLive555.cmake
contrib/: CMakeLists.txt
contrib/live/: Makefile  config.linux-with-shared-libraries
contrib/live/BasicUsageEnvironment/: Makefile
contrib/live/BasicUsageEnvironment/include/: BasicUsageEnvironment_version.hh
contrib/live/UsageEnvironment/: Makefile
contrib/live/UsageEnvironment/include/: UsageEnvironment_version.hh
contrib/live/groupsock/: Makefile
contrib/live/groupsock/include/: groupsock_version.hh
contrib/live/liveMedia/: Makefile  RTSPServer.cpp
contrib/live/liveMedia/include/: liveMedia_version.hh
contrib/live/mediaServer/: Makefile  live555MediaServer  version.hh
contrib/live/proxyServer/: Makefile  live555ProxyServer
contrib/live/testProgs/: MPEG2TransportStreamIndexer  Makefile  openRTSP  playSIP  registerRTSPStream  sapWatch  testAMRAudioStreamer  testDVVideoStreamer  testH264VideoStreamer  testH264VideoToTransportStream  testH265VideoStreamer  testH265VideoToTransportStream  testMKVStreamer  testMP3Receiver  testMP3Streamer  testMPEG1or2AudioVideoStreamer  testMPEG1or2ProgramToTransportStream  testMPEG1or2Splitter  testMPEG1or2VideoReceiver  testMPEG1or2VideoStreamer  testMPEG2TransportReceiver  testMPEG2TransportStreamTrickPlay  testMPEG2TransportStreamer  testMPEG4VideoStreamer  testOggStreamer  testOnDemandRTSPServer  testRTSPClient  testRelay  testReplicator  testWAVAudioStreamer  vobStreamer
inc/: CameraUnicastServerMediaSubsession.hpp  Config.hpp  LiveCameraRTSPServer.hpp  Logger.hpp  Transcoder.hpp  Utils.hpp  Version.hpp
include/: CameraUnicastServerMediaSubsession.hpp  Config.hpp  LiveCamFramedSource.hpp  LiveCameraRTSPServer.hpp  Transcoder.hpp
include/config/: ConfigFileType.hpp  ConfigLoader.hpp  ConfigLoaderFactory.hpp  ExtensionConfigLoaderFactory.hpp  YamlConfigLoader.hpp
include/config/params/: Configuration.hpp
include/utils/: Logger.hpp  Utils.hpp
libs/ffmpeg/: nasm  ndisasm  x264
libs/ffmpeg/include/: x264_config.h
libs/ffmpeg/include/libavutil/: ffversion.h
libs/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc  x265.pc
libs/ffmpeg/share/doc/ffmpeg/: faq.html  ffmpeg.html  (+13 more)
libs/ffmpeg_sources/nasm-2.14/doc/: Makefile
libs/ffmpeg_sources/nasm-2.14/macros/: macros.c
scripts/: install_ffmpeg_with_deps.sh
src/: CameraUnicastServerMediaSubsession.cpp  LiveCamFramedSource.cpp  LiveCameraRTSPServer.cpp  Transcoder.cpp  Utils.cpp  main.cpp
src/config/: ConfigLoader.cpp  ExtensionConfigLoaderFactory.cpp  YamlConfigLoader.cpp
(+22 files in other folders)
